Fixes horizontal scrolling issue.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .title {
   color: #f2f6f9;
   font-size: 3em;
